# Solitario

./: CMakeLists.txt  Carta.cpp  Carta.h  Cola.cpp  Cola.h  Dealer.cpp  Dealer.h  Interfaz.cpp  Interfaz.h  Makefile  Mesa.cpp  Mesa.h  Nodo.cpp  Nodo.h  Pila.cpp  Pila.h  main.cpp
